chore(article): modify article details
