# docs/swagger.yaml
@@ -1,4 +1,137 @@
 definitions:
+  dto.Article:
+    properties:
+      access:
+        type: string
+      alphabet_count:
+        type: integer
+      approved_at:
+        type: string
+      approved_by:
+        type: string
+      article_id_old:
+        type: integer
+      article_user:
+        description: Attachments               []*entity.Attachment   `json:"attachments"`
+        items:
+          $ref: '#/definitions/dto.ArticleUser'
+        type: array
+      article_uuid:
+        type: string
+      breaking_news_at:
+        type: string
+      canonical_url:
+        type: string
+      canonical_url_old:
+        type: string
+      content:
+        type: string
+      content_category:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: string
+      description:
+        type: string
+      domain_id:
+        type: integer
+      domain_id_old:
+        type: integer
+      embed_code:
+        type: string
+      fact_check_claim:
+        type: string
+      fact_check_result:
+        type: string
+      fact_check_result_image:
+        type: string
+      feature_image:
+        type: string
+      feature_image_caption:
+        type: string
+      foot_note:
+        type: string
+      format_article_id:
+        type: integer
+      headline_at:
+        type: string
+      id:
+        type: integer
+      infografis_file:
+        type: string
+      is_active:
+        type: boolean
+      is_anonymous_reporter_editor:
+        type: boolean
+      is_article_jembatan:
+        type: string
+      is_audio_available:
+        type: boolean
+      is_byline:
+        type: boolean
+      is_label_tag:
+        description: will be deleted soon
+        type: string
+      kicker:
+        type: string
+      language:
+        type: string
+      paragraphs:
+        items:
+          type: string
+        type: array
+      published_at:
+        type: string
+      published_by:
+        type: string
+      snackbar:
+        type: string
+      status:
+        type: string
+      sub_rubric_id:
+        type: integer
+      summary:
+        items:
+          type: string
+        type: array
+      tag_article:
+        items:
+          $ref: '#/definitions/dto.ArticleTagsOld'
+        type: array
+      tag_article_new:
+        items:
+          type: string
+        type: array
+      tag_title:
+        items:
+          type: string
+        type: array
+      taicing:
+        type: string
+      title_digital:
+        type: string
+      title_print:
+        type: string
+      title_seo:
+        type: string
+      tts_audio_url:
+        type: string
+      unpublished_at:
+        type: string
+      unpublished_by:
+        type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      upperdeck:
+        type: string
+      word_count:
+        type: integer
+      writing_style:
+        type: string
+    type: object
   dto.ArticleCreateRequestDto:
     properties:
       body:
@@ -13,15 +146,142 @@ definitions:
     type: object
   dto.ArticleDetailResponse:
     properties:
-      body:
+      access:
+        type: string
+      alphabet_count:
+        type: integer
+      approved_at:
+        type: string
+      approved_by:
+        type: string
+      article_id_old:
+        type: integer
+      article_user:
+        description: Attachments               []*Attachment     `json:"attachments"`
+        items:
+          $ref: '#/definitions/dto.ArticleUser'
+        type: array
+      article_uuid:
+        type: string
+      breaking_news_at:
+        type: string
+      canonical_url:
+        type: string
+      canonical_url_old:
+        type: string
+      content:
+        type: string
+      content_category:
         type: string
       created_at:
         type: string
+      created_by:
+        type: string
+      description:
+        type: string
+      domain_id:
+        type: integer
+      domain_id_old:
+        type: integer
+      embed_code:
+        type: string
+      fact_check_claim:
+        type: string
+      fact_check_result:
+        type: string
+      fact_check_result_image:
+        type: string
+      feature_image:
+        type: string
+      feature_image_caption:
+        type: string
+      foot_note:
+        type: string
+      format_article_id:
+        type: integer
+      headline_at:
+        type: string
       id:
         type: integer
-      title:
+      infografis_file:
+        type: string
+      is_active:
+        type: boolean
+      is_anonymous_reporter_editor:
+        type: boolean
+      is_article_jembatan:
+        type: string
+      is_audio_available:
+        type: boolean
+      is_byline:
+        type: boolean
+      is_label_tag:
+        description: will be deleted soon
+        type: string
+      kicker:
+        type: string
+      language:
+        type: string
+      paragraphs:
+        items:
+          type: string
+        type: array
+      published_at:
+        type: string
+      published_by:
+        type: string
+      snackbar:
+        type: string
+      status:
+        type: string
+      sub_rubric_id:
+        type: integer
+      summary:
+        items:
+          type: string
+        type: array
+      tag_article:
+        items:
+          $ref: '#/definitions/dto.ArticleTagsOld'
+        type: array
+      tag_article_new:
+        items:
+          type: string
+        type: array
+      tag_title:
+        items:
+          type: string
+        type: array
+      taicing:
+        type: string
+      title_digital:
+        type: string
+      title_print:
+        type: string
+      title_seo:
+        type: string
+      tts_audio_url:
+        type: string
+      unpublished_at:
+        type: string
+      unpublished_by:
         type: string
       updated_at:
+        type: string
+      updated_by:
+        type: string
+      upperdeck:
+        type: string
+      word_count:
+        type: integer
+      writing_style:
+        type: string
+    type: object
+  dto.ArticleTagsOld:
+    properties:
+      alias:
+        type: string
+      caption:
         type: string
     type: object
   dto.ArticleUpdateRequestDto:
@@ -35,6 +295,33 @@ definitions:
     required:
     - body
     - title
+    type: object
+  dto.ArticleUser:
+    properties:
+      article:
+        $ref: '#/definitions/dto.Article'
+      article_id:
+        type: integer
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      id:
+        type: integer
+      type:
+        type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      user:
+        $ref: '#/definitions/dto.User'
+      user_id:
+        type: integer
     type: object
   dto.AuthRequestDto:
     properties:
@@ -63,6 +350,67 @@ definitions:
         type: integer
       total_page:
         type: integer
+    type: object
+  dto.User:
+    properties:
+      actived_at:
+        type: string
+      actived_by:
+        type: string
+      alias:
+        type: string
+      biodata:
+        type: string
+      biodata_en:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      email:
+        type: string
+      facebook:
+        type: string
+      force_reset_password:
+        type: boolean
+      foto:
+        type: string
+      id:
+        type: integer
+      is_admin:
+        type: boolean
+      is_contributor:
+        type: boolean
+      is_editor:
+        type: boolean
+      linked:
+        type: string
+      main_email:
+        type: string
+      name:
+        type: string
+      nik:
+        type: string
+      password:
+        type: string
+      secondary_email:
+        type: string
+      twitter:
+        type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      user_remp_id:
+        type: integer
+      username:
+        type: string
+      uuid:
+        type: string
     type: object
   dto.UserInfoResponse:
     properties:
